# evalblink

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
benchmarks/: classification.yaml  exact_match_classification.yaml  first_classification.yaml  llm_as_judge.yaml  test.yaml  weighted_match_config.yaml
evalblink/: __init__.py  analysis.py  cache.py  compare.py  estimate.py  evaluator.py  main.py  openrouter.py  reporter.py  runner.py  schemas.py  validator.py
evalblink.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analysis.py  test_cache.py  test_compare.py  test_estimate.py  test_evaluator.py  test_main.py  test_openrouter.py  test_reporter.py  test_run_pipeline.py  test_runner.py  test_validator.py
